--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,6 @@ spring.jpa.properties.hibernate.format_sql=true
 
 # Server Configuration
 server.port=8081
+
+# Springdoc / Swagger
+springdoc.show-actuator=false
